# quantum-sparse-portfolio-ml

./: .gitignore  README.md  math_formulation.md  next_steps.md  phase1_results.md  phase2_results.md  phase3_results.md  phase4_figures.md  phase_0_research_log.md  presentation_outline.md  proposal.md  pyproject.toml  references.bib  report.md  report.typ  research_brief.md  strategy_plan.md
data/raw/: etf_prices.csv
results/phase1/: penalty_sweep.csv  penalty_sweep_summary.csv  solver_benchmark.csv
results/phase2/: baseline_selection.csv  ml_selection_lasso.csv
results/phase3/: gradient_boosting_daily_returns.csv  gradient_boosting_selections.csv  gradient_boosting_summary.csv  historical_daily_returns.csv  historical_q_k_sweep.csv  historical_selections.csv  historical_summary.csv  lasso_daily_returns.csv  lasso_selections.csv  lasso_summary.csv
results/phase5/: solver_scaling.csv  solver_scaling_summary.csv
scripts/: fetch_etf_prices.py  phase1_random_sweep.py  phase1_toy_qubo.py  phase2_baseline_selection.py  phase2_ml_selection.py  phase3_backtest_gradient_boosting.py  phase3_backtest_historical.py  phase3_backtest_lasso.py  phase3_sweep_historical.py  phase4_make_figures.py  phase5_solver_scaling.py
src/sparse_portfolio/: __init__.py  backtest.py  data.py  experiments.py  features.py  forecasts.py  qubo.py  risk.py  solvers.py
tests/: test_backtest.py  test_data_features_risk.py  test_experiments.py  test_forecasts.py  test_ml_forecasts.py  test_qubo.py  test_solvers.py
