[project]
name = "quantum-inspired-sparse-portfolio"
version = "0.1.0"
description = "Quantum-inspired sparse portfolio optimization final project"
requires-python = ">=3.10"
dependencies = [
    "dimod>=0.12.21",
    "dwave-neal>=0.6.0",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pytest>=9.0.3",
    "scikit-learn>=1.7.2",
    "yfinance>=1.3.0",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "sparse_portfolio"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
